[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/spawners/MonsterSpawner.gd" type="Script" id=1]
[ext_resource path="res://images/monsters.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "spawning",
"speed": 4.0
} ]

[node name="MonsterSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="MonsterSpawnerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
frames = SubResource( 3 )
animation = "spawning"

[node name="MonsterSpawnerPosition" type="Position2D" parent="."]

[node name="MonsterSpawnerTimer" type="Timer" parent="."]

[connection signal="timeout" from="MonsterSpawnerTimer" to="." method="_on_MonsterSpawnerTimer_timeout"]
